[package]
name = "mcp2515"
description = "`#![no_std]` library for interacting with MCP2515 CAN controller chips."
version = "0.2.2"
authors = ["David Cole <david.cole1340@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/davidcole1340/mcp2515-rs"
categories = ["no-std", "embedded"]
keywords = ["can", "mcp2515"]

[dependencies]
embedded-can = "0.4.1"
embedded-hal = "1.0.0"
modular-bitfield = "0.11.2"

defmt = { version = "0.3.2", optional = true }
ufmt = { version = "0.2.0", optional = true }
