[package]
name = "mcp2515-arduino"
version = "0.1.0"
authors = ["David Cole <david.cole1340@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
mcp2515 = { path = "../../", features = ["ufmt"] }

embedded-can = "0.4.1"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "d827cddad6bdab4b8a03b77bec1a3601b1868b5c"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
debug = true
codegen-units = 1
lto = true
opt-level = "s"
